resume overflow fix

--- a/styles.css
+++ b/styles.css
@@ -422,7 +422,6 @@ p {
   justify-content: center;
   align-items: center;
   margin-top: 0px;
-  padding: 1em;
   width: 100%;
 }
 
